# SkillboxDjango

./: .gitignore
M_01_LinuxIntro/SkillBoxDjangoProject/: manage.py
M_01_LinuxIntro/SkillBoxDjangoProject/SkillBoxDjangoProject/: asgi.py  settings.py  urls.py  wsgi.py
M_02_DjangoIntro/mysite/mysite/: settings.py
M_03_DatabaseAndModels/mysite/shopapp/: models.py  views.py
M_04_DjangoAdmin/mysite/shopapp/: admin.py  models.py
M_05_RequestsAndMiddlewares/mysite/mysite/: settings.py  urls.py
M_05_RequestsAndMiddlewares/mysite/shopapp/: admin.py  admin_mixins.py
M_05_RequestsAndMiddlewares/mysite/uploadfileapp/: apps.py  middlewares.py  urls.py  views.py
M_06_Forms/mysite/shopapp/: forms.py  models.py  urls.py  views.py
M_07_CBV/mysite/shopapp/: admin.py  forms.py  models.py  urls.py  views.py
M_08_Auth/mysite/myauth/: middlewares.py  urls.py  views.py
M_08_Auth/mysite/mysite/: settings.py  urls.py
M_09_permissions/mysite/myauth/: forms.py  managers.py  models.py  urls.py  views.py
M_09_permissions/mysite/mysite/: settings.py  urls.py
M_09_permissions/mysite/shopapp/: admin.py  models.py  views.py
M_10_Testing/mysite/shopapp/: tests.py  urls.py  views.py
M_11_Files/mysite/myauth/: apps.py  forms.py  models.py  urls.py  views.py
M_11_Files/mysite/mysite/: settings.py  urls.py
M_14_Docs/mysite/: requirements.txt
M_16_logging/: Dockerfile  docker-compose.yaml
M_16_logging/mysite/: requirements.txt
M_17_import_export/: orders_to_add.csv
M_19_prod/: .env.template  docker-compose.yaml  pyproject.toml
M_19_prod/mysite/mysite/: settings.py
(+107 files in other folders)
