[tool.poetry]
name = "skillbox django lessons - 19 prod"
version = "0.1.0"
description = "Skillbox practical work - Django app deploy"
authors = ["Mikhail Nartsissov <nartsissov_ma@mail.ru>"]


[tool.poetry.dependencies]
python = "^3.10"
django = "4.2.0"
djangorestframework = "^3.14.0"
gunicorn = "^20.1.0"
django-filter = "^23.2"
django-debug-toolbar = "^4.1.0"
pillow = "^10.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
